should fix footer flicker problem in widgets

--- a/css/main.css
+++ b/css/main.css
@@ -317,9 +317,9 @@ body.widget .timer-pane .timer .seconds-container { min-width: 142px; }
 body.widget .timer-pane .timer span.milliseconds { width: 24px; }
 body.widget .finished-pane .description { margin-bottom: 0; }
 
-body.widget .footer { opacity: 0; background-color: #fafafa; border-top: 1px solid #eee; min-height: 40px;
+body.widget .footer { visibility: hidden; opacity: 0; background-color: #fafafa; border-top: 1px solid #eee; min-height: 40px;
 	-webkit-transition: opacity 750ms ease; -moz-transition: opacity 750ms ease; -o-transition: opacity 750ms ease; transition: opacity 750ms ease;}
-body.widget:hover .footer { opacity: 1; }
+body.widget:hover .footer { visibility: visible; opacity: 1;  }
 body.widget .footer .spread { background-color: transparent; border: none; height: 22px; overflow: hidden; top: auto; left: 10px; bottom: 10px; opacity: 0.2;}
 body.widget .footer .spread:hover { opacity: 0.8; }
 body.widget .footer .spread .spread-button { left: 0; bottom: 0; }
